# tiny_agent_gym

./: .gitignore  README.md  __init__.py  ai.py  llm_as_a_judge.py  main.py  models.py  pyproject.toml  utils.py
agents/react/: README.md  main.py  react.md  react.py
agents/react/actions/: __init__.py  create_new_file.py  delete_existing_file.py  edit_existing_file.py  read_existing_file_s.py
agents/react/utils/: directory.py
agents/react_v2/: main.py
agents/react_v2/actions/: run_terminal_command.py
agents/react_v2/utils/: ai.py
agents/react_with_mcp/: README.md  main.py  react.py
agents/react_with_mcp/actions/: __init__.py
evals/example/: eval.py
evals/example/solution/: main.py  markdown_converter.py
helpers/: ai.py  llm_as_a_judge.py  logger.py  models.py
tasks/: example.json
